# musicplayer

./: project-context.md
musicplayer/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
musicplayer/scripts/: round-app-icon.swift
musicplayer/src/: App.css  App.tsx  store.ts  types.ts
musicplayer/src-tauri/: Cargo.toml  tauri.conf.json
musicplayer/src-tauri/icons/: icon.icns
musicplayer/src-tauri/src/: audio.rs  db.rs  lib.rs  scanner.rs
