[package]
name = "musicplayer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
walkdir = "2.5.0"
lofty = "0.24.0"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
symphonia = { version = "0.6.0", default-features = false, features = ["mp3", "wav", "pcm"] }
cpal = "0.17.3"
rustfft = "6.4.1"
